NTI-316 - Fix placeholder button alignment

--- a/src/main/js/assessment/components/Placeholder.scss
+++ b/src/main/js/assessment/components/Placeholder.scss
@@ -28,6 +28,10 @@
 		display: none;
 	}
 
+	a.button {
+		margin: 0;
+	}
+
 	.dialog.window {
 		z-index: 10;
 		top: 40%;
